force-app/main/default/objects/PMC_DH_EntitlementRules__c/PMC_DH_EntitlementRules__c.object-meta.xml
<CustomObject>
    <label>Product Entitlement Rule</label>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Entitlement Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Entitlement Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>