force-app/main/default/objects/PMC_DH_EntitlementRules__c/fields/PMC_DH_AccountProductName__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_AccountProductName__c</fullName>
    <label>Account Product Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>