force-app/main/default/objects/PMC_DH_EntitlementRules__c/fields/PMC_DH_isProcessed__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProcessed</label>
    <type>Checkbox</type>
</CustomField>