force-app/main/default/objects/PMC_DH_EntitlementRules__c/fields/PMC_DH_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Entitlement Rule</relationshipLabel>
    <relationshipName>Product_Entitlement_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>