force-app/main/default/objects/PMC_DH_EntitlementRules__c/fields/PMC_DH_SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SoldToAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Entitlement Rule</relationshipLabel>
    <relationshipName>Product_Entitlement_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>