force-app/main/default/objects/PMC_DH_EntitlementRules__c/fields/PMC_DH_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ENABLED</fullName>
            </value>
            <value>
                <fullName>RESTRICTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>