force-app/main/default/objects/PMC_DH_EntitlementRules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PMC_DH_SoldToAccount__c</columns>
    <columns>PMC_DH_AccountProductName__c</columns>
    <columns>PMC_DH_Product__c</columns>
    <columns>PMC_DH_Type__c</columns>
    <columns>PMC_DH_isActive__c</columns>
    <columns>PMC_DH_isProcessed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_DH_SoldToAccount__c</field>
        <operation>contains</operation>
        <value>SHRIEVE</value>
    </filters>
    <label>All</label>
</ListView>